refactor(aligner): improve null safety, simplify logic with enhanced switch (#2291)
* refactor(aligner): improve null safety, simplify logic with enhanced switch

- make three fields as non-nullable comparisonMode, algorithmClass and calcualtorType and streamline null checks.
- define defaults of the three fields.
- insert srcLang/trgLang null checks
- enhanced switch can reduce unnecessary defaults and improve readability.
- use getFirst()/getLast()/removeFirst() for performance.

* test(aligner): remove redundant test for missing settings validation